<resources>
    <string name="app_name">GPS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Acerca De</string>
    <string name="nav_maps">Mapas</string>
    <string name="drawer_open">Abrir Menu</string>
    <string name="drawer_close">Cerrar Menu</string>
    <string name="nav_conf">Configuracion</string>
    <string name="nuevo_texto_de_marcador">Nombre del marcador</string>
    <string name="fecha">Fecha de los marcadores a mostrar</string>
    <string name="refresh_location">Refresh Location</string>
    <string name="add_new_point">Add new point</string>
    <string name="nav_polygon">Manage Polygon</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="enter_the_latitude_and_longitude_of_the_new_point">Enter the latitude and longitude of the new point:</string>
    <string name="polygon">POLYGON</string>
    <string name="agregar_punto">Agregar punto</string>
    <string name="actualizar">Actualizar</string>
    <string name="phone">Telefono</string>
</resources>