<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/nav_home"
            android:icon="@android:drawable/ic_menu_add" />
        <item
            android:id="@+id/maps"
            android:title="@string/nav_maps"
            android:icon="@android:drawable/ic_menu_mapmode"
            />
        <item
            android:id="@+id/conf"
            android:title="@string/nav_conf"
            android:icon="@android:drawable/ic_menu_set_as"
            />
        <item
            android:id="@+id/polygon"
            android:title="@string/nav_polygon"
            android:icon="@android:drawable/ic_menu_add"
            />
        <item
            android:id="@+id/phone"
            android:title="Telefono Emergencia"
            android:icon="@android:drawable/stat_sys_phone_call"
            />
    </group>
</menu>